<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ribbit</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="username_hint">UserName</string>
    <string name="sign_up_text">Don\'t have an account? Sign Up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email Address</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="signup_error_message">Please make sure you enter a username, password and email</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a username and password.</string>
    <string name="login_error_title">Oops!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="empty_inbox_label">No new messages!</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="error_title">We\'re sorry! </string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage</string>
    <string name="general_error">Sorry, there was and error!</string>
    <string name="video_file_size_waring">The selected video must be less than 10MB.</string>
    <string name="error_file_size_too_large">Sorry, file size is too large!</string>
    <string name="error_opening_file">There was a problem with the selected file.</string>
    <string name="error_closing_file">There was a problem closing the selected file.</string>
    <string name="empty_recipients_list_message">Choose some friends first!</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file">There was an error with the file selected. Please select a different file.</string>
    <string name="message_sent">Message sent!</string>
    <string name="error_sending_message">There was and error sending the message! Please try again.</string>
    <string name="content_desc_background">Ribbit Frog Background Image.</string>
    <string name="subtitle">A Treehouse Project</string>
    <string name="content_desc_button_divider">Button divider</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="title_activity_view_image">Ribbit</string>

</resources>
